caller-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caller-deployment-v1
spec:
  selector:
    matchLabels:
      app: caller
      version: v1
  template:
    metadata:
      labels:
        app: caller
        version: v1
    spec:
      containers:
      - name: caller
        image: piomin/caller-service

        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /etc/podinfo
            name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caller-deployment-v2
spec:
  selector:
    matchLabels:
      app: caller
      version: v2
  template:
    metadata:
      labels:
        app: caller
        version: v2
    spec:
      containers:
        - name: caller
          image: piomin/caller-service

          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/podinfo
              name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: v1
kind: Service
metadata:
  name: caller-service
spec:
  type: ClusterIP
  selector:
    app: caller
  ports:
  - port: 8080
