caller-service/k8s/ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: caller-service
  labels:
    app.openshift.io/runtime: spring-boot
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
      labels:
        app.openshift.io/runtime: spring-boot
    spec:
      containerConcurrency: 10
      containers:
      - name: caller
        image: piomin/caller-service
        ports:
          - containerPort: 8080
        env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: POD_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
