caller-service/k8s/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: caller-service-destination
spec:
  host: caller-service.test.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: caller-service-gateway-route
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    - match:
        - headers:
            X-Version:
              exact: v1
          uri:
            prefix: "/caller"
      rewrite:
        uri: " "
      route:
        - destination:
            host: caller-service.test.svc.cluster.local
            subset: v1
    - match:
        - uri:
            prefix: "/caller"
          headers:
            X-Version:
              exact: v2
      rewrite:
        uri: " "
      route:
        - destination:
            host: caller-service.test.svc.cluster.local
            subset: v2
    - match:
        - uri:
            prefix: "/caller"
      rewrite:
        uri: " "
      route:
        - destination:
            host: caller-service.test.svc.cluster.local
            subset: v1
          weight: 20
        - destination:
            host: caller-service.test.svc.cluster.local
            subset: v2
          weight: 80
